<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/second_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/id_registerTitle"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginTop="30dp"
        android:fontFamily="serif-monospace"
        android:padding="2dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/blackFont"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/blackFont"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:freezesText="true"
        android:hint="@string/FirstName"
        android:inputType="text"
        android:keyboardNavigationCluster="false"
        android:shadowRadius="20.5"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/blackFont"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:freezesText="true"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:keyboardNavigationCluster="false"
        android:shadowRadius="20.5"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_psw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/blackFont"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:freezesText="true"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:keyboardNavigationCluster="false"
        android:shadowRadius="20.5"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/id_confirmPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/blackFont"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:freezesText="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:keyboardNavigationCluster="false"
        android:shadowRadius="20.5"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/blackFont"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:freezesText="true"
        android:hint="@string/phone"
        android:inputType="phone"
        android:keyboardNavigationCluster="false"
        android:shadowRadius="20.5"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/SignupBtn"
        android:theme="@style/AppTheme"
        app:srcCompat="@drawable/submit" />


</LinearLayout>