<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/first_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/frontpagetitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="serif-monospace"
        android:padding="2dp"
        android:text="@string/hometitle"
        android:textAlignment="center"
        android:textColor="@color/blackFont"
        android:textSize="75sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_useremail"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/blackFont"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:freezesText="true"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:keyboardNavigationCluster="false"
        android:shadowRadius="20.5"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_userpsw"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/blackFont"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:freezesText="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:contextClickable="true"
        android:fontFamily="serif-monospace"
        android:hint="@string/NewUser"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        />


    <Button
        android:id="@+id/btn_login"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:background="@color/colorPrimary"
        android:text="@string/LogIn"
        android:textColor="@color/whiteFont"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>