<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".user_quizCategories">


    <TextView
        android:id="@+id/id_tvSelect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="10dp"
        android:text="@string/selectCategory"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/id_frameLinear1"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="170dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/general_knowledge"
                android:contentDescription="" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="73dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:text="@string/Gk"
                android:textAlignment="center"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/sports"
                android:textAlignment="center"
                android:textSize="28sp" />


            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/sports" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="165dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="212dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/computer_science" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="199dp"
                android:layout_height="75dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:text="@string/CompSci"
                android:textAlignment="center"
                android:textSize="28sp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>